--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -437,6 +437,7 @@ li .checkbox {
 .navbar-brand img {
     display: inline-block;
     height: 100%;
+    margin-right: 20px;
 }
 
 .navbar-collapse.in {
